# Open-Heavens

./: .env.example  .gitignore  README.md  alembic.ini  check_data.py  check_schema.py  check_teenagers_data.py  deployment.md  docker-compose.yml  migrate_all_tables.py  migrate_data.py.bak  pyproject.toml  requirements.txt  run.sh
.github/workflows/.github/workflows/: deploy.yml
alembic/: env.py  script.py.mako
app/: config.py  db.py  main.py  models.py  repos.py  repos.py.bak
app/routers/: __init__.py  comments.py  hymns.py  likes.py  open_heavens.py  prayers.py
notification_service/: config.py  database_manager.py  firebase_manager.py  main.py  openheavens-notifications.service  requirements.txt  scheduler.py
sql/: init_schema.sql
tests/: test_api_key.py
